--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "scripts": {
     "test": "mocha",
-    "dev": "next dev"
+    "dev": "node server.js"
   },
   "repository": {
     "type": "git",
@@ -26,6 +26,7 @@
     "ganache-cli": "^6.1.8",
     "mocha": "^5.2.0",
     "next": "^4.1.4",
+    "next-routes": "^1.4.2",
     "react": "^16.6.0",
     "react-dom": "^16.6.0",
     "semantic-ui-css": "^2.4.1",
